# CMakeSharedLibProjectTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
AniCore/: CMakeLists.txt
AniCore/src/: globals.cpp  globals.h
AniCore/src/basic/: Exception.hpp
AniCore/src/network/: NetHandler.cpp  NetHandler.h  NetJob.cpp  NetJob.hpp  NetUtil.hpp
AniTest/: CMakeLists.txt
execapp/: CMakeLists.txt
execapp/src/: main.cpp  main.h
sharedlib/: CMakeLists.txt
sharedlib/src/: globals.cpp  globals.h
